# CivSimulator

./: .gitignore  CMakeLists.txt  CivSimulation.pro  CivSimulation.pro.user.af553c5.4.8-pre1  CivSimulation.pro.user.b9c5dc2  Makefile.Debug  Makefile.Release  README.md  buildNRun.sh  images.qrc  main.cpp  world.cpp  world.hpp
Autre/: Cahier_des_charges.odt  Qt_Bruno.odt  UML.mdj
CivSimulation/: CivSimulation.pro  images.qrc
Model/: Agent.cpp  Agent.h  Building.cpp  Building.h  Entity.cpp  Entity.h  Figure.cpp  Figure.h  Headquarter.cpp  Headquarter.h  Healthbar.cpp  Machine.cpp  Machine.h  Metal.cpp  Metal.h  Ressource.cpp  Ressource.h  Soldier.cpp  Soldier.h  Worker.cpp  Worker.h  World.cpp  World.h
build-CivSimulation-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.CivSimulation.Debug  object_script.CivSimulation.Release
src/: Agent.cpp  Agent.h  Building.cpp  Building.h  Entity.cpp  Entity.h  Grid.cpp  Grid.h  Headquarter.cpp  Headquarter.cpp.autosave  Headquarter.h  Healthbar.cpp  Healthbar.h  Machine.cpp  Machine.h  Metal.cpp  Metal.h  RandomManager.cpp  RandomManager.h  Resource.cpp  Resource.h  Ressource.cpp  Ressource.h  Soldier.cpp  Soldier.h  TimeManager.cpp  TimeManager.h  Worker.cpp  Worker.h  World.cpp  World.h
src/controller/: RandomManager.cpp  RandomManager.h  Simulator.cpp  Simulator.h
src/model/: Agent.cpp  Agent.h  Entity.cpp  Entity.h  Grid.cpp  Grid.h  Headquarter.cpp  Headquarter.h  Healthbar.cpp  Healthbar.h  Metal.cpp  Metal.h  RandomManager.cpp  RandomManager.h  Resource.cpp  Resource.h  (+9 more)
(+29 files in other folders)
